Bug 844031 - Fix Intel graphics driver detection. r=bjacob